2001-02-18  David O'Brien  <obrien@FreeBSD>

	* configure.in: Recognize FreeBSD/arm, FreeBSD/PowerPC, and treat
	FreeBSD/i386-CURRENT differently until I can figure out the needed
	corefile changes.
	* configure: Regenerate.
	* config.bfd: Recognize FreeBSD/x86-64, FreeBSD/ia64, FreeBSD/arm,
	FreeBSD/PowerPC, and FreeBSD/sparc64.

2001-02-14  Philip Blundell  <pb@futuretv.com>

	From 2001-02-06  H.J. Lu  <hjl@gnu.org>
	* bfd/peicode.h (coff_swap_filehdr_in): Remove the e_magic
	checking.
	(pe_bfd_object_p): Rewrite with external_PEI_DOS_hdr and
	external_PEI_IMAGE_hdr.
	
2001-02-14  Bo Thorsen  <bo@suse.de>

        * elf64-x86-64.c: Small formatting fixes and rearrangements of code.
        (elf64_86_64_size_info): Struct added to fix a problem
        with the hashtable string entries.
        (elf64_x86_64_adjust_dynamic_symbol): Add generation of .got.plt.
        (elf64_x86_64_size_dynamic_sections): A FIXME removed.
        (elf64_x86_64_size_dynamic_sections): Fix a dynamic entry and
        remove the FIXME for this.
        (elf64_x86_64_adjust_dynamic_symbol): Fix check for unneeded .plt
        section. Also removed the FIXME for it.
        (x86_64_elf_howto_table): Use bfd_elf_generic_reloc.
        (ELF_DYNAMIC_INTERPRETER): Fix the name of the dynamic linker.
        (elf64_x86_64_finish_dynamic_sections): Enable .got.plt writing.

2001-02-14  Philip Blundell  <pb@futuretv.com>

	From 2001-02-08  H.J. Lu  <hjl@gnu.org>
	* elf32-i386.c (elf_i386_check_relocs): Reserve R_386_32
	relocation entries for weak definitions when building DSO with
	-Bsymbolic.

2001-02-13  Richard Henderson  <rth@redhat.com>

	* elfxx-ia64.c (elfNN_ia64_final_link): Set __gp if required
	and not user provided.

2001-02-13  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c (elf32_hppa_set_gp): Handle weak $global$.  If
	$global$ referenced but not defined, set its value here.

2001-02-09  Bo Thorsen  <bo@suse.de>
